--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom CSS -->
-        <link href="css/freelancer.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -101,7 +101,7 @@
             }
           });
         }
-          
+
         </script>
 
         <!-- Navigation -->
@@ -604,7 +604,7 @@
         <script src="js/contact_me.js"></script>
 
         <!-- Custom Theme JavaScript -->
-        <script src="js/freelancer.js"></script>
+        <script src="js/scripts.js"></script>
 
     </body>
 
