added pre header div

--- a/login.html
+++ b/login.html
@@ -140,6 +140,8 @@
             <!-- /.container-fluid -->
         </nav>
 
+		<div class="clear"></div>
+
 		<!-- start top_bg -->
 		<div class="top_bg">
 			<div class="wrap">
