--- a/login.html
+++ b/login.html
@@ -144,7 +144,7 @@
             <div class="container">
                 <div class="row">
                 	<div class="intro-text">
-                        <span class="skills">Create an account or Login</span>
+                        <span class="name">Create an Account or Login</span>
                     </div>
 
 					<!-- start main -->
