--- a/login.html
+++ b/login.html
@@ -120,8 +120,10 @@
 						              // Hooray! Let them use the app now.
 						              alert("Success! Welcome " + x.elements[0].value + "!");
 						              move();
-						              res.redirect('/index.html');
 						            },
+						            user.signUp().then(function(user) {
+								      res.redirect('/index.html');
+								    }
 						            error: function(user, error) {
 						              // Show the error message somewhere and let the user try again.
 						              alert("Error: " + error.code + " " + error.message);
@@ -136,8 +138,10 @@
 						            // Do stuff after successful login.
 						            alert("Welcome " + x.elements[0].value + "!");
 						            move();
-						            res.redirect('/index.html');
 						            },
+						            user.logIn().then(function(user) {
+								      res.redirect('/index.html');
+								    }
 						            error: function(user, error) {
 						            // The login failed. Check error to see why.
 						            alert("Error: " + error.code + " " + error.message);
