--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                    <a class="navbar-brand" href="#page-top">Eventful</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,10 +57,10 @@
                             <a href="#page-top"></a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#portfolio">Portfolio</a>
+                            <a href="#portfolio">About</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#about">About</a>
+                            <a href="#about">Login</a>
                         </li>
                         <li class="page-scroll">
                             <a href="#contact">Contact</a>
