--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </header>
 
         <!-- About Section -->
-        <section class="success" id="about">
+        <section id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
@@ -121,7 +121,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact">
+        <section class="success" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
