--- a/event.html
+++ b/event.html
@@ -32,59 +32,18 @@
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <script>
-								//***********************************************************
-						          // Be sure to add your Parse Keys and Facebook App ID Below!
-						          //***********************************************************
-
-						          // Initialize Parse
-						          Parse.initialize("dB1ANk1pqDccOoQnapFUnF78V2Sfvb0koKE16RC5", "MW2XuVu8m1mCszvFTnVpETs1ayUkM0IfXwG3AeH4");
-
-						          function register(){
-						          var x = document.getElementById("frm1");
-						          var user = new Parse.User();
-						          user.set("fname", x.elements[0].value);
-						          user.set("lname", x.elements[1].value);
-						          user.set("username", x.elements[2].value);
-						          user.set("password", x.elements[3].value);
-						          user.set("email", x.elements[4].value);
-						          user.signUp(null, {
-						            success: function(user) {
-						              // Hooray! Let them use the app now.
-						              alert("Success! Welcome " + x.elements[0].value + "!");
-						              move();
-						            },
-						            user.signUp().then(function(user) {
-								      window.location.replace("http://marcormz.me/Eventful");
-								    }
-						            error: function(user, error) {
-						              // Show the error message somewhere and let the user try again.
-						              alert("Error: " + error.code + " " + error.message);
-						            }
-						          });
-						        }
-
-						        function login() {
-						          var x = document.getElementById("frm2");
-						          Parse.User.logIn(x.elements[0].value, x.elements[1].value, {
-						            success: function(user) {
-						            // Do stuff after successful login.
-						            alert("Welcome " + x.elements[0].value + "!");
-						            move();
-						            },
-						            error: function(user, error) {
-						            // The login failed. Check error to see why.
-						            alert("Error: " + error.code + " " + error.message);
-
-						            }
-						          });
-						        }
-
-							    </script>
-
     </head>
 
     <body id="page-top" class="index">
+
+        <script>
+          //***********************************************************
+          // Be sure to add your Parse Keys and Facebook App ID Below!
+          //***********************************************************
+
+          // Initialize Parse
+          Parse.initialize("dB1ANk1pqDccOoQnapFUnF78V2Sfvb0koKE16RC5", "MW2XuVu8m1mCszvFTnVpETs1ayUkM0IfXwG3AeH4");
+        </script>
 
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -129,7 +88,7 @@
             <div class="container">
                 <div class="row">
                 	<div class="intro-text">
-                        <h2>Create an Account or Login</h2>
+                        <h2>Create Event</h2>
                     </div>
 
 					<!-- start main -->
@@ -137,79 +96,21 @@
 						<div class="wrap">
 							<div class="main">
 								<div class="login_left">
-									<h3>New Users:</h3>
+									<h3>Please fill out all fields</h3>
 									<div class="registration_form">
 									 <!-- Form -->
 										<form id="frm1" action="form_action.asp">
-									      <p align="left">First name:<br/> <input type="text" name="fname" placeholder="e.g. John"><br></p>
+									      <p align="left">Event name:<br/> <input type="text" name="fname" placeholder="e.g. John"><br></p>
 									      <p align="left">Last name:<br/> <input type="text" name="lname" placeholder="e.g. Smith"><br></p>
 									      <p align="left">Username:<br/> <input type="text" name="uname" placeholder="e.g. John23"><br></p>
 									      <p align="left">Password: <br/> <input type="password" name="pass" placeholder="e.g. MyPass*23"><br></p>
-									      <p align="left">Email: <br/> <input type="text" name="mail" placeholder="e.g. john@gmail.com"><br></p>
+									      <p align="left">Contact email: <br/> <input type="text" name="mail" placeholder="e.g. john@gmail.com"><br></p>
 									      <p align="center"><input type="button" onclick="register()" value="Register" ></p>
 									    </form>
 										<!-- /Form -->
 									</div>
 								</div>
-								<!-- Función que añade los datos a la base de datos -->
-								<script>
-								//***********************************************************
-						          // Be sure to add your Parse Keys and Facebook App ID Below!
-						          //***********************************************************
 
-						          // Initialize Parse
-						          Parse.initialize("dB1ANk1pqDccOoQnapFUnF78V2Sfvb0koKE16RC5", "MW2XuVu8m1mCszvFTnVpETs1ayUkM0IfXwG3AeH4");
-
-						          function register(){
-							          var x = document.getElementById("frm1");
-							          var user = new Parse.User();
-							          user.set("fname", x.elements[0].value);
-							          user.set("lname", x.elements[1].value);
-							          user.set("username", x.elements[2].value);
-							          user.set("password", x.elements[3].value);
-							          user.set("email", x.elements[4].value);
-							          user.signUp(null, {
-							            success: function(user) {
-							              // Hooray! Let them use the app now.
-							              alert("Success! Welcome " + x.elements[0].value + "!");
-							              move();
-							            },
-							            error: function(user, error) {
-							              // Show the error message somewhere and let the user try again.
-							              alert("Error: " + error.code + " " + error.message);
-							            }
-							          });
-							        }
-
-							        function login() {
-							          var x = document.getElementById("frm2");
-							          Parse.User.logIn(x.elements[0].value, x.elements[1].value, {
-							            success: function(user) {
-							            // Do stuff after successful login.
-							            alert("Welcome " + x.elements[0].value + "!");
-							            move();
-							            },
-							            error: function(user, error) {
-							            // The login failed. Check error to see why.
-							            alert("Error: " + error.code + " " + error.message);
-
-							            }
-							          });
-							        }
-
-							    </script>
-							    <div class="login_left">
-									<h3>Login</h3>
-									<div class="registration_form">
-									 <!-- Form -->
-										<form id="frm2" action="form_action.asp">
-									      <p align="center"><input type="text" name="username" placeholder="Username" /> </p>
-									      <p align="center"><input type="password" name="password" placeholder="Password"/> </p>
-									      <p align="center"><input type="button" onclick="login()" value="Login" ></p>
-									    </form>
-										<!-- /Form -->
-									</div>
-								</div>
 								<div class="clear"></div>
 							</div>
 						</div>
