--- a/event.html
+++ b/event.html
@@ -119,6 +119,19 @@
             </div>
         </header>
 
+        <!-- Footer -->
+        <footer class="text-center">
+            <div class="footer-below">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            Copyright &copy; Eventful 2015
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <!-- jQuery Version 1.11.0 -->
         <script src="js/jquery-1.11.0.js"></script>
 
