--- a/event.html
+++ b/event.html
@@ -84,8 +84,8 @@
             <!-- /.container-fluid -->
         </nav>
 
-        <header>
-            <div class="container">
+        <section class="success">
+        	<div class="container">
                 <div class="row">
                 	<div class="intro-text">
                         <h2>Create Event</h2>
@@ -117,7 +117,7 @@
 					</div>
                 </div>
             </div>
-        </header>
+        </section>
 
         <!-- Footer -->
         <footer class="text-center">
