changed to header

--- a/event.html
+++ b/event.html
@@ -84,8 +84,8 @@
             <!-- /.container-fluid -->
         </nav>
 
-        <section class="success">
-        	<div class="container">
+        <header class="success">
+            <div class="container">
                 <div class="row">
                 	<div class="intro-text">
                         <h2>Create Event</h2>
@@ -117,7 +117,7 @@
 					</div>
                 </div>
             </div>
-        </section>
+        </header>
 
         <!-- Footer -->
         <footer class="text-center">
