--- a/event.html
+++ b/event.html
@@ -84,7 +84,7 @@
             <!-- /.container-fluid -->
         </nav>
 
-        <header class="success">
+        <header>
             <div class="container">
                 <div class="row">
                 	<div class="intro-text">
