added img upload

--- a/event.html
+++ b/event.html
@@ -119,6 +119,26 @@
 									</div>
 								</div>
 
+								<div class="login_left">
+									<h3>Upload Event Map</h3>
+									<div class="map_form">
+									 <!-- Form -->
+								      <form id="upload">
+										  <div class="outer">
+										    <div>
+										      <input type="file" />
+										    </div>
+										    <a href="#" class="upload">Pick an image</a>
+										  </div>
+										</form>
+
+										<script type="text/javascript">
+										  new Uploader({ el: "#upload" });
+										</script>
+
+									</div>
+								</div>
+
 								<div class="clear"></div>
 							</div>
 						</div>
