--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <a href="#about">About</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="event.html">Create Event</a>
+                            <a href="https://eventmngr.parseapp.com">Create Event</a>
                         </li>
                         <li class="page-scroll">
                             <a href="login.html">Login</a>
